fix alignment in Chrome

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -417,15 +417,18 @@ html.index {
             
             article {
                 @include outer-container;
-                padding: $base-spacing;
+                padding-top: $base-spacing;
+                padding-bottom: $base-spacing;
                 
                 @media only screen and (min-width: $large-screen) and (min-height: $min-hero-height) {
-                height: 100%;
-                display: table;
-            }
+                    height: 100%;
+                    display: table;
+                }
                 
                 & > div {
                     font-size: rem(17);
+                    padding-left: $base-spacing;
+                    padding-right: $base-spacing;
                     
                     .menu {
                         margin-left: -14px;
